meego-keyboard (0.7.15~1) unstable; urgency=low

  * Fixes: NB#275190

 -- Wang Zongxin <ext-zongxin.wang@nokia.com>  Wed, 28 Sep 2011 15:30:03 +0300

meego-keyboard (0.7.14-1) unstable; urgency=low

  * Fixes: NB#280952

 -- Wang Zongxin <ext-zongxin.wang@nokia.com>  Thu, 22 Sep 2011 11:11:11 +0300

meego-keyboard (0.7.13-1) unstable; urgency=low

  * Fixes: NB#281465

 -- Aapo Kojo <aapo.kojo@nokia.com>  Fri, 16 Sep 2011 15:04:06 +0300

meego-keyboard (0.7.12-1) unstable; urgency=low

  * New release

 -- Aapo Kojo <aapo.kojo@nokia.com>  Mon, 12 Sep 2011 13:03:01 +0300

meego-keyboard (0.7.11-1) unstable; urgency=low

  * Fixes: NB#278596 - Opening new message window is jerky/stuttering

 -- Michael Hasselmann <michaelh@openismus.com>  Thu, 08 Sep 2011 15:10:23 +0200

meego-keyboard (0.7.10-1) unstable; urgency=low

  * Fixes: NB#279536, VKB slide and popup feedbacks need to be updated along with new vibra daemon

 -- Ning Chi <ext-chi.2.ning@nokia.com>  Tue, 30 Aug 2011 12:46:00 +0300

meego-keyboard (0.7.9-1) unstable; urgency=low

  * Fixes: NB#279040 - HWR crashed after Zhuyin input in email field of Contacts application

 -- huaming wang <huaming.wang@nokia.com>  Fri, 26 Aug 2011 14:57:08 +0300

meego-keyboard (0.7.8-1) unstable; urgency=low

  * Fixes: NB#252531, Cursor is in the wrong end of textedit in arabic.

 -- Aapo Kojo <aapo.kojo@nokia.com>  Thu, 25 Aug 2011 14:56:26 +0300

meego-keyboard (0.7.7-1) unstable; urgency=low

  * Fixes: NB#278443 - Input: ITU-T VKB (T9 keyboard) in Hindi number mode has Arabic letters. It should be always Latin letters

 -- Aapo Kojo <aapo.kojo@nokia.com>  Wed, 24 Aug 2011 10:20:00 +0300

meego-keyboard (0.7.6-1) unstable; urgency=low

  * Fixes: NB#275406 - Something wrong when inputing '*' and '#' in Contacts application.

 -- huaming wang <huaming.wang@nokia.com>  Tue, 23 Aug 2011 15:33:02 +0300

meego-keyboard (0.7.5-1) unstable; urgency=low

  * Fixes: NB#277056 - Zhuyin; Enter key does not dismiss candidates
